# ACP_Agent

./: Dockerfile  README.md  pyproject.toml
docs/: audit_shared.json  diagram.md  ruff_audit.txt  setup_end.md
infra/: docker-compose.prod.yml  docker-compose.yml  init-db.sql  pgbouncer.ini  userlist.txt
infra/kubernetes/base/: acp-secret.yaml
scripts/: load_test.py  reinit_system.py  run_audit.py
scripts/utils/: seed_admin.py
sdk/: __init__.py  utils.py
sdk/common/: audit_stream.py  auth.py  config.py  db.py  invariants.py  migrate.py  ratelimit.py  resilient_client.py
services/api/router/: incident.py
services/audit/: aggregator.py  integrity.py  main.py  models.py  router.py  writer.py
services/audit/alembic/: env.py
services/behavior/: main.py
services/billing/: router.py  value_engine.py
services/decision/: engine.py  intelligence.py  main.py  router.py  schemas.py
services/forensics/: router.py
services/gateway/: auth.py  behavior_client.py  client.py  inference_proxy.py  main.py  middleware.py
services/groq_worker/: service.py
services/identity/: models.py  registry_client.py  router.py  token_service.py
services/identity/tests/: conftest.py
services/insight/: main.py  worker.py
services/learning/: service.py
services/policy/: main.py  router.py  schemas.py
services/policy/policies/: agent_policy.rego
services/registry/: main.py  service.py
services/usage/: main.py
tests/: test_enterprise_hardening.py
tests/load/: locustfile.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json
ui/src/: App.jsx  index.css
(+22 files in other folders)
